test/runnable/imports/bar10378.d

module imports.bar10378;

void writeln() { }
