test/fail_compilation/imports/fail357b.d
module imports.fail357b;

struct Foo
{
    static void foo() {}
}
